--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <div id="root">
         <div class="container mt-5 mb-5">
             <h1 class="display-2">1. Stock Price Over Time</h1>
-            <canvas id="time-chart" ></canvas>
+            <canvas id="time-chart" width="400" height="200"></canvas>
+
         </div>
         <div class="container mt-5 mb-5">
             <h1 class="display-2">2. Highest Stock Price</h1>
@@ -26,6 +27,8 @@
     <!-- Our JavaScript Code  -->
     <script src="mockData.js"></script>
     <script src="index.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+
 </body>
 
 </html>
